--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@ body {
   font-family: Arial, sans-serif;
   text-align: center;
   background-color: rgb(0, 0, 0);
+  overflow: scroll;
 }
 
 .container {
@@ -107,7 +108,7 @@ top: 400px;
 border-radius: 20px;
 border: 5px solid;
 border-color: rgb(255, 255, 255)
-overflow: auto;
+
 }
 
 
